--- a/compte.html
+++ b/compte.html
@@ -117,6 +117,7 @@
             px-2
             flex
             py-2
+        hidden
             text-white
             md:justify-center">
         <div class="md:w-[800px] w-full flex gap-12 items-center">
