--- a/ajouter.html
+++ b/ajouter.html
@@ -182,7 +182,7 @@
                 <p class="mt-4">IBAN <span class="text-blue-600">*</span></p>
                 <input class="w-full p-2 mt-2 h-12 rounded-md border border-blue-600" type="text" id="iban"
                     placeholder="XXXX XXXX XXXX XXXX XXXX XXXX XXX" required>
-                <p>CA + 25 caractères</p>
+                <p>FR + 25 caractères</p>
                  <!-- Section optionnelle: Informations de carte de crédit -->
                  <div class="mt-6">
                      <details class="border border-blue-300 rounded-md bg-white">
