--- a/compte.html
+++ b/compte.html
@@ -156,7 +156,7 @@
                         <p>Compte</p>
                         <p id="ibanMasked">••••&nbsp;7561</p>
                     </div>
-                    <p class="text-blue-500 text-xl"><span id="soldeClient"></span> $</p>
+                    <p class="text-blue-500 text-xl"><span id="soldeClient"></span> €</p>
                 </div>
                 <div class="">
                     <div class="border float-right right-0 rounded-md md:w-[800px] gap-2 items-center w-full h-15 cursor-pointer bg-white border-gray-400 mt-5 p-2 flex  hover:shadow-md transition-all">
@@ -183,14 +183,14 @@
                                     <p>Livret A ••••&nbsp;7561</p>
                                     <p></p>
                                 </div>
-                                <p class="text-black text-xl"><span id="epargneId"></span> $</p>
+                                <p class="text-black text-xl"><span id="epargneId"></span> €</p>
                             </div>
 
                             <div class="w-full mt-2 bg-[#DEDEDE] rounded-full h-1.5 mb-4 ">
                                 <div class="bg-[#B56E2B] h-1.5 rounded-full" style="width: 30%"></div>
                             </div>
                             <div>
-                                <p class="float-right">Plafond des versements : 5.000 $</p>
+                                <p class="float-right">Plafond des versements : 5.000 €</p>
                             </div>
 
                         </div>
