--- a/virement.html
+++ b/virement.html
@@ -158,7 +158,7 @@
                             </div>
 
 
-                            <p class="text-green-600 text-xl">+ <span id="soldeClients"></span> $</p>
+                            <p class="text-green-600 text-xl">+ <span id="soldeClients"></span> €</p>
                         </div>
                         <div id="compteLivretA" class="border border-l-0 border-r-0 border-b-O h-16 cursor-pointer bg-white border-gray-400  p-2 flex justify-between hover:shadow-md transition-all text-sm">
                             <div class="flex gap-2">
@@ -173,7 +173,7 @@
                                     <p>CA76 2344 4176 XXX XXX</p>
                                 </div>
                             </div>
-                            <p class="text-green-600 text-xl">+ <span id="epargneIds"></span> $</p>
+                            <p class="text-green-600 text-xl">+ <span id="epargneIds"></span> €</p>
                         </div>
                     </div>
                 </div>
