--- a/virement.html
+++ b/virement.html
@@ -153,7 +153,7 @@
                                 </div>
                                 <div>
                                     <p>Compte</p>
-                                    <p>CA76 3000 3016 XXX XXX</p>
+                                    <p>FR76 3000 3016 XXX XXX</p>
                                 </div>
                             </div>
 
@@ -170,7 +170,7 @@
                                 </div>
                                 <div>
                                     <p>Livret A</p>
-                                    <p>CA76 2344 4176 XXX XXX</p>
+                                    <p>FR76 2344 4176 XXX XXX</p>
                                 </div>
                             </div>
                             <p class="text-green-600 text-xl">+ <span id="epargneIds"></span> €</p>
